Trying to fix the Fat-Jar